# Buried-at-C

./: NOTICE  README
content/: advanced-topics.html  tutorials.html
content/advanced-topics/01-working-with-python/: CMakeLists.txt  pytest.py.in  readme.html
content/advanced-topics/01-working-with-python/include/: printers.h
content/advanced-topics/01-working-with-python/src/: printers.c
content/advanced-topics/01-working-with-python/tests/: pytest.py  run_tests.py
content/tutorials/hello-world/: readme.html
content/tutorials/hello-world/src/: main.c
template/: readme.html
tutorials/hello-world/: CMakeLists.txt  readme.html
tutorials/testing/hello-world/: CMakeLists.txt
tutorials/testing/hello-world/src/: main.c
tutorials/testing/test-runner/: CMakeLists.txt
tutorials/testing/test-runner/src/: main.c
